tests/negative/undefined_struct.sans
// expect-error: undefined
main() I {
  x = Foo{a: 1}
  0
}
